--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,5 +1,7 @@
 container_commands:
-  01_migrate:
+  01_makemigrations:
+  	command; "django-admin.py makemigrations"
+  02_migrate:
     command: "django-admin.py migrate"
     leader_only: true
 option_settings:
