--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,6 +1,6 @@
 container_commands:
   01_makemigrations:
-  	command; "django-admin.py makemigrations"
+  	command: "django-admin.py makemigrations"
   02_migrate:
     command: "django-admin.py migrate"
     leader_only: true
