--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -3,7 +3,7 @@ container_commands:
     command: "django-admin.py makemigrations"
     leader_only: true
   02_migrate:
-    command: "django-admin.py migrate"
+    command: "django-admin.py migrate --fake"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
