--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,8 +1,10 @@
 container_commands:
-  01_makemigrations:
+  01_fakemigrations:
+    command: "django-admin.py migrate --fake-initial"
+  02_makemigrations:
     command: "django-admin.py makemigrations"
     leader_only: true
-  02_migrate:
+  03_migrate:
     command: "django-admin.py migrate"
     leader_only: true
 option_settings:
