--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,6 +1,6 @@
 container_commands:
-  01_fakemigrations:
-    command: "django-admin.py migrate --fake-initial"
+  #01_fakemigrations:
+  #  command: "django-admin.py migrate --fake-initial"
   02_makemigrations:
     command: "django-admin.py makemigrations"
     leader_only: true
