Add no-input flag to migrate container command

--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,11 +1,9 @@
 container_commands:
-  #01_fakemigrations:
-  #  command: "django-admin.py migrate --fake-initial"
-  02_makemigrations:
+  01_makemigrations:
     command: "django-admin.py makemigrations"
     leader_only: true
-  03_migrate:
-    command: "django-admin.py migrate"
+  02_migrate:
+    command: "django-admin.py migrate --no-input"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
