--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,9 +1,9 @@
 container_commands:
-  01_makemigrations:
-    command: "django-admin.py makemigrations"
-    leader_only: true
+  #01_makemigrations:
+  #  command: "django-admin.py makemigrations"
+  #  leader_only: true
   02_migrate:
-    command: "django-admin.py migrate --no-input"
+    command: "django-admin.py migrate"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
