Readded make migrations container command

--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,7 +1,7 @@
 container_commands:
-  #01_makemigrations:
-  #  command: "django-admin.py makemigrations"
-  #  leader_only: true
+  01_makemigrations:
+    command: "django-admin.py makemigrations"
+    leader_only: true
   02_migrate:
     command: "django-admin.py migrate --run-syncdb"
     leader_only: true
