--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: null
     group_suffix: null
   master:
-    environment: homewise-django-dev
+    environment: HomewiseDjango-env
     group_suffix: null
 global:
   application_name: homewise-django
